@@ -180,6 +180,14 @@ public class JFreeChartSliderNode extends PNode {
         trackPPath.setStrokePaint( selected ? highlightColor : Color.black );
     }
 
+    public Rectangle2D.Double getTrackFullBounds(){
+        return trackPPath.getFullBounds();
+    }
+
+    public Rectangle2D.Double getThumbFullBounds(){
+        return sliderThumb.getFullBounds();
+    }
+
     /**
      * Clients can listen for value change events, whether generated by the slider or another call.
      */
